src/base/objects/VoC__c/VoC__c.object-meta.xml
<CustomObject>
    <label>VoC</label>
    <nameField>
        <label>VoC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VoC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>