src/base/objects/VoC__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VoC</relationshipLabel>
    <relationshipName>VoC</relationshipName>
    <type>Lookup</type>
</CustomField>