src/base/objects/VoC__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>VoC</relationshipLabel>
    <relationshipName>VoC</relationshipName>
    <type>Lookup</type>
</CustomField>