src/base/objects/VoC__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blocker</fullName>
            </value>
            <value>
                <fullName>Challenge</fullName>
            </value>
            <value>
                <fullName>Nice to have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>