src/base/objects/VoC__c/fields/Jira_Coda_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Coda_Link__c</fullName>
    <label>Jira / Coda Link</label>
    <type>Url</type>
</CustomField>