src/base/objects/VoC__c/fields/Jira_Coda_Title__c.field-meta.xml
<CustomField>
    <fullName>Jira_Coda_Title__c</fullName>
    <label>Jira / Coda Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>