src/base/objects/VoC__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFCC-740</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>VoC</relationshipLabel>
    <relationshipName>VoC</relationshipName>
    <type>Lookup</type>
</CustomField>