src/base/objects/VoC__c/fields/Reason_to_Believe__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Believe__c</fullName>
    <description>What additional context is there around the feedback? Have we heard this before?</description>
    <inlineHelpText>What additional context is there around the feedback? Have we heard this before?</inlineHelpText>
    <label>Reason to Believe</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>