src/base/objects/VoC__c/fields/VoC_Tag__c.field-meta.xml
<CustomField>
    <fullName>VoC_Tag__c</fullName>
    <label>VoC Tag</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>#api-management</fullName>
            </value>
            <value>
                <fullName>#api-qt</fullName>
            </value>
            <value>
                <fullName>#billing</fullName>
            </value>
            <value>
                <fullName>#cbc-product</fullName>
            </value>
            <value>
                <fullName>#cluster-creation</fullName>
            </value>
            <value>
                <fullName>#cluster-details</fullName>
            </value>
            <value>
                <fullName>#cluster-management</fullName>
            </value>
            <value>
                <fullName>#eth2-api-documentation</fullName>
            </value>
            <value>
                <fullName>#eth2-api-function</fullName>
            </value>
            <value>
                <fullName>#eth2-product</fullName>
            </value>
            <value>
                <fullName>#help-content</fullName>
            </value>
            <value>
                <fullName>#onboarding-materials</fullName>
            </value>
            <value>
                <fullName>#onboarding-process</fullName>
            </value>
            <value>
                <fullName>#organizations</fullName>
            </value>
            <value>
                <fullName>#platform-usability</fullName>
            </value>
            <value>
                <fullName>#pre-sale QT request</fullName>
            </value>
            <value>
                <fullName>#product-Advanced-Query</fullName>
            </value>
            <value>
                <fullName>#product-commerce</fullName>
            </value>
            <value>
                <fullName>#product-delegation</fullName>
            </value>
            <value>
                <fullName>#product-feature-requests</fullName>
            </value>
            <value>
                <fullName>#product-NFT</fullName>
            </value>
            <value>
                <fullName>#product-participation</fullName>
            </value>
            <value>
                <fullName>#product-pay</fullName>
            </value>
            <value>
                <fullName>#product-qt</fullName>
            </value>
            <value>
                <fullName>#product-WaaS</fullName>
            </value>
            <value>
                <fullName>#qbr-participate-issues</fullName>
            </value>
            <value>
                <fullName>#qbr-product-cbc</fullName>
            </value>
            <value>
                <fullName>#qbr-product-participate</fullName>
            </value>
            <value>
                <fullName>#qbr-product-platform</fullName>
            </value>
            <value>
                <fullName>#qbr-qt-issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>