src/base/objects/VoC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>VoC_Tag__c</columns>
    <columns>Protocol__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Bison_Team</group>
    </sharedTo>
</ListView>